# anarede-executor

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
examples/: basic_example.py
examples/cases/case65/case65-23/: case65.pwf
examples/cases/case65/case65-26/: case65.pwf
src/anarede_executor/: __init__.py  executor.py  installer.py
